# AI-Agent

./: pyproject.toml  report.md
output/: question.md  report.md  research.md
src/spec_read/: crew.py  main.py
src/spec_read/config/: agents.yaml  tasks.yaml
src/spec_read/tools/: pdf_reader.py
