[project]
name = "spec_read"
version = "0.1.0"
description = "spec_read using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.1.0"
]

[project.scripts]
spec_read = "spec_read.main:run"
run_crew = "spec_read.main:run"
train = "spec_read.main:train"
replay = "spec_read.main:replay"
test = "spec_read.main:test"
run_with_trigger = "spec_read.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
